# ha-ipaper

./: .gitignore  Dockerfile  Pipfile  README.md  config.yaml  entrypoint.sh  pyproject.toml
doc/: E-Reader Jailbreak.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
ha-ipaper/: __main__.py  httpserver.py
html-template/: error.html  index.html  menu.html  style.css
html-template/components/: climates.html  covers.html  forecast.html  light.html  lights.html  sensors.html  switches.html
html-template/pages/: climates.html  home.html  lights.html  sensors.html
src/ha_ipaper/: __main__.py  httpserver.py
src/ha_ipaper/core/: config.py  dependencies.py
src/ha_ipaper/html-template/: debug.html  graph.html  index.html  style.css
src/ha_ipaper/html-template/components/: climates.html  forecast.html  lights.html  sensors.html  switches.html
src/ha_ipaper/routers/: graph.py  pages.py  svg.py
src/ha_ipaper/services/: homeassistant.py
src/ha_ipaper/utils/: filesystem.py
tools/: svg_symbols_to_files.py
